traefik/traefikdocsExample/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: traefik
  labels:
    name: traefik
spec:
  containers:
  - name: traefik
    image: traefik:v2.5
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    args:
        - --api.insecure
        - --accesslog
        - --entrypoints.web.Address=:8000
        - --entrypoints.websecure.Address=:4443
        - --providers.kubernetescrd
        - --certificatesresolvers.myresolver.acme.tlschallenge
        - --certificatesresolvers.myresolver.acme.email=smrtrock@outlook.com
        - --certificatesresolvers.myresolver.acme.storage=acme.json
        # Please note that this is the staging Let's Encrypt server.
        # Once you get things working, you should remove that whole line altogether.
        - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
    ports:
      - name: web
        containerPort: 8000
      - name: websecure
        containerPort: 4443
      - name: admin
        containerPort: 8080
