traefik/traefikdocsExample/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: traefik-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`my.smrtrock.com`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`my.smrtrock.com`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: myresolver
